[package]
name = "ch1-time-api"
version = "0.1.0"
authors = ["shibu <shibu_st@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_codegen = "0.4.3"
serde = "1.0.104"
chrono = "0.4.10"
rocket = "0.4.3"
serde_derive = "1.0.104"
rocket_contrib  = "0.4.3"


[[bin]]
name = "ch1-time-api"
path = "main.rs"
